--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint --config ./.eslintrc.js --ignore-path ./.eslintignore ./src/**/*",
     "ipfs": "node ./scripts/ipfs.js",
     "surge": "cp build/index.html build/200.html && surge ./build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "s3": "node ./scripts/s3.js",
     "ship": "yarn surge"
   },
@@ -84,6 +86,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "gh-pages": "^3.2.3",
     "ipfs-http-client": "^45.0.0",
     "prettier": "^2.3.2",
     "react-app-rewired": "^2.1.8",
