--- a/packages/react-app/public/manifest.json
+++ b/packages/react-app/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "🏗 Scaffold-Eth App",
+  "short_name": "Solaris Margin Trading",
   "start_url": ".",
-  "name": "🏗 Scaffold-Eth App",
+  "name": "Solaris Margin Trading",
   "icons": [
     {
       "src": "favicon.ico",
