refactor: build errors fix, clean up

--- a/packages/react-app/tsconfig.json
+++ b/packages/react-app/tsconfig.json
@@ -36,6 +36,7 @@
   "include": [
     "./src/**/*",
     "babel.config.js",
-    "config-overrides.js"
+    "config-overrides.js",
+    "linaria.config.js"
   ]
 }
