--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@scaffold-eth/react-app",
   "version": "1.0.0",
-  "homepage": ".",
+  "homepage": "https://eth-margin.solarisprotocol.com/",
   "scripts": {
     "build": "react-app-rewired build",
     "eject": "react-scripts eject",
@@ -49,7 +49,6 @@
     "qrcode.react": "^1.0.0",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
-    "react-css-theme-switcher": "^0.2.2",
     "react-dom": "^17.0.2",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
